# locksmith

./: .gitignore  .readthedocs.yaml  pyproject.toml  resources.qrc
.github/workflows/: release.ci.yml
docs/: conf.py  dev-control.md  developer-guide.rst  kerifoundation-plugin.rst  plugin-authoring.md  requirements.txt
docs/superpowers/plans/: 2026-05-16-locksmith-plugin-loader-stage1.md
docs/superpowers/specs/: 2026-05-16-locksmith-plugin-loader-design.md
src/locksmith/: dev_control.py
src/locksmith/core/: adjudication.py  apping.py  configing.py  credentialing.py  grouping.py  habbing.py  headless.py  indirecting.py  ipexing.py  receipting.py  remoting.py  rotating.py  signals.py  turretting.py  vaulting.py
src/locksmith/db/: basing.py
src/locksmith/plugins/: __init__.py  base.py  installer.py  manager.py  manifest.py  storage.py
src/locksmith/turret/: directing.py  handling.py
src/locksmith/ui/: navigation.py  styles.py  toolbar.py  (+1 more)
tests/: test_credentialing.py  test_dev_control.py  test_headless.py  test_keri_v2_compat.py  test_kerifoundation_account_gating.py  test_kerifoundation_onboarding_service.py  test_kerifoundation_onboarding_ui.py  test_kerifoundation_vault_deletion.py  test_kerifoundation_witnesses.py  test_normalize_salt.py  test_plugin_manager.py  test_plugins_base.py  test_plugins_concurrency.py  test_plugins_installer.py  test_plugins_integration.py  test_plugins_kerifoundation_migration.py  test_plugins_manager.py  test_plugins_manifest.py  test_plugins_page_visual.py  test_plugins_storage.py  test_turret_uxd.py
tools/: devctl.py
(+39 files in other folders)
