# pyproject.toml

[build-system]

requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Locksmith"
version = "0.0.1"
description = "Locksmith – KERI identity vault application"
readme = "README.md"
requires-python = ">=3.14.0"
license = { text = "MIT" }

authors = [
    { name = "Phillip Feairheller", email = "pfeairheller@gmail.com" },
    { name = "Ari Argoud", email = "ariargoud@gmail.com" },
    { name = "Evan Asakawa", email = "evanja57@gmail.com" }
]

keywords = ["KERI Foundation", "cryptography", "KERI", "ACDC"]

classifiers = [
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "PySide6==6.10.3",
    "qasync>=0.28.0",
    "keri @ git+https://github.com/WebOfTrust/keripy.git",
    "qtawesome>=1.4.0",
    "mnemonic==0.21",
    "multicommand==1.0.0",
    "pillow==12.2.0",
    "qrcode[pil]==8.2",
    "pyotp==2.9.0",
    "prometheus_client>=0.21.1",
    "schedule==1.2.2",
    "kerkle>=0.0.3",
    "cbor>=1.0.0",
    "falcon==4.2.0",
    "requests==2.32.3",
    'cryptography>=46.0.3',
    'pymongo>=4.11.2',
]

[project.entry-points."locksmith.plugins"]
kerifoundation = "locksmith.plugins.kerifoundation.plugin:KeriFoundationPlugin"


[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
